--- a/Roupas.html
+++ b/Roupas.html
@@ -27,7 +27,7 @@
             <div class="produto">
                 <div class="item">
                     <div class="imagem">
-                        <img src="imagem/camisetaazul.png">
+                        <img src="img/camisetaazul.png">
                     </div>
                     <h3>Camiseta Masculina de Treino Cardio Mesh Academy Tech 2.0 Under Armour</h3>
                     <span>R$ 119,99 </span>
@@ -35,7 +35,7 @@
                 </div>
                 <div class="item">
                     <div class="imagem">
-                        <img src="imagem/camisetapreta.png">
+                        <img src="img/camisetapreta.png">
                     </div>
                     <h3>Camiseta Masculina de Treino de Compressão Domyos</h3>
                     <span>R$ 69,99 </span>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="item">
                     <div class="imagem">
-                        <img src="imagem/topcinza.png">
+                        <img src="img/topcinza.png">
                     </div>
                     <h3>Top Feminino de Treino Básico New 100 Domyos</h3>
                     <span>R$ 49,99 </span>
